--- a/Assets/AquaSys/AquaSys.Patch/package.json
+++ b/Assets/AquaSys/AquaSys.Patch/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "com.sayo.auqapatch",
+    "name": "com.sayo.aquapatch",
     "displayName": "AquaPatch",
     "version": "0.0.1",
     "unity": "2019.4",
@@ -18,5 +18,8 @@
         "com.unity.modules.assetbundle": "1.0.0",
         "com.unity.modules.unitywebrequest": "1.0.0",
         "com.unity.modules.unitywebrequestassetbundle": "1.0.0"
+		"com.focus-creative-games.hybridclr_unity": "https://gitee.com/focus-creative-games/hybridclr_unity.git#v2.0.0-rc",
+		"com.cysharp.unitask": "https://github.com/DumoeDss/UniTask.git?path=src/UniTask/Assets/Plugins/UniTask#for_yooasset",
+		"com.tuyoogame.yooasset": "https://github.com/DumoeDss/YooAsset.git?path=Assets/YooAsset#for_aqua_patch",
     }
 }
