[fix]  sample 依赖

--- a/Assets/AquaSys/AquaSys.Patch/Samples/Scripts/AquaSys.Patch.Samples.asmdef
+++ b/Assets/AquaSys/AquaSys.Patch/Samples/Scripts/AquaSys.Patch.Samples.asmdef
@@ -8,7 +8,8 @@
         "GUID:f51ebe6a0ceec4240a699833d6309b23",
         "GUID:b35e33884f6755d43b7e0511e88956d0",
         "GUID:f22fac247a56d2d41b687bb0d900e54e",
-        "GUID:1777f48613af17c4194845eef64fefda"
+        "GUID:1777f48613af17c4194845eef64fefda",
+        "GUID:7397f43e0b1a3d847937b93cedfc7a42"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
