--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "Assets/HybridCLR"]
-	path = Assets/HybridCLR
+[submodule "Packages/HybridCLR"]
+	path = Packages/HybridCLR
 	url = https://github.com/DumoeDss/hybridclr_unity.git
