--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,6 +1,6 @@
 {
   "dependencies": {
-	"com.cysharp.unitask": "https://github.com/DumoeDss/UniTask.git?path=src/UniTask/Assets/Plugins/UniTask#for_yooasset",
+    "com.cysharp.unitask": "https://github.com/DumoeDss/UniTask.git?path=src/UniTask/Assets/Plugins/UniTask#for_yooasset",
     "com.unity.collab-proxy": "1.17.2",
     "com.unity.ide.rider": "3.0.15",
     "com.unity.ide.visualstudio": "2.0.16",
@@ -10,6 +10,7 @@
     "com.unity.test-framework": "1.1.31",
     "com.unity.textmeshpro": "3.0.6",
     "com.unity.timeline": "1.4.8",
+    "com.unity.toolchain.win-x86_64-linux-x86_64": "2.0.4",
     "com.unity.ugui": "1.0.0",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
